--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -22,14 +22,12 @@ internment = { version = "0.7.0", optional = true }
 krates = { version = "0.16.6", optional = true }
 tracing = { workspace = true }
 proc-macro2-diagnostics = { version = "0.10", default-features = false }
-rstml = { path = "../../../Tinkering/rstml" }
 prettier-please = { version = "*" }
 
 [features]
-default = ["html", "hot_reload"]
+default = ["hot_reload"]
 hot_reload = ["dep:krates", "dep:internment", "dep:dioxus-core"]
 serde = ["dep:serde"]
-html = []
 
 
 [dev-dependencies]
