--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ version = "0.5.2"
 
 # dependencies that are shared across packages
 [workspace.dependencies]
-dioxus = { path = "packages/dioxus", version = "0.5.0", features = ["minimal"], default-features = false }
+dioxus = { path = "packages/dioxus", version = "0.5.0" }
 dioxus-lib = { path = "packages/dioxus-lib", version = "0.5.0" }
 dioxus-core = { path = "packages/core", default-features = false, version = "0.5.0" }
 dioxus-core-macro = { path = "packages/core-macro", version = "0.5.0" }
@@ -119,6 +119,9 @@ axum_session_auth = "0.12.1"
 axum-extra = "0.9.2"
 reqwest = "0.11.24"
 owo-colors = "4.0.0"
+ciborium = "0.2.1"
+base64 = "0.21.0"
+once_cell = "1.17.1"
 
 # speed up some macros by optimizing them
 [profile.dev.package.insta]
