--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -38,7 +38,7 @@ dioxus-mobile = { workspace = true, optional = true }
 
 tracing = { workspace = true }
 tracing-futures = { workspace = true, optional = true }
-once_cell = "1.17.1"
+once_cell = { workspace = true }
 tokio-util = { version = "0.7.8", features = ["rt"], optional = true }
 anymap = { version = "0.12.1", optional = true }
 async-trait = { version = "0.1.58", optional = true }
@@ -47,8 +47,8 @@ serde = "1.0.159"
 tokio-stream = { version = "0.1.12", features = ["sync"], optional = true }
 futures-util = { workspace = true }
 futures-channel = { workspace = true }
-ciborium = "0.2.1"
-base64 = "0.21.0"
+ciborium = { workspace = true }
+base64 = { workspace = true }
 
 pin-project = { version = "1.1.2", optional = true }
 thiserror = { workspace = true, optional = true }
