--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,6 +144,9 @@ opt-level = 3
 inherits = "dev"
 debug-assertions = false
 
+# [profile.release]
+# debug = true
+
 # This is a "virtual package"
 # It is not meant to be published, but is used so "cargo run --example XYZ" works properly
 [package]
