fix: template names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,7 @@ prettyplease = { version = "0.2.16", features = ["verbatim"] }
 manganis-cli-support = { version = "0.2.1", features = ["html"] }
 manganis = { version = "0.2.1" }
 interprocess = { version = "1.2.2", package = "interprocess-docfix" }
+const_format = "0.2.32"
 
 lru = "0.12.2"
 async-trait = "0.1.77"
