--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1", features = ["derive"], optional = true }
 tracing-subscriber = "0.3.18"
 generational-box = { workspace = true }
 rustversion = "1.0.17"
+const_format = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
