revert changes to axum-hello-world

--- a/packages/fullstack/examples/axum-hello-world/Cargo.toml
+++ b/packages/fullstack/examples/axum-hello-world/Cargo.toml
@@ -9,16 +9,13 @@ publish = false
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack"]}
 serde = "1.0.159"
+simple_logger = "4.2.0"
 tracing-wasm = "0.2.1"
-tracing.workspace = true
+tracing = { workspace = true }
 tracing-subscriber = "0.3.17"
 reqwest = "0.11.18"
-tokio = { workspace = true, features = ["full"], optional = true }
-async-std = "1.12.0"
-rand = "0.8.5"
-getrandom = "0.2.15"
 
 [features]
 default = []
-server = ["dioxus/axum", "dep:tokio"]
-web = ["dioxus/web", "getrandom/js"]
+server = ["dioxus/axum"]
+web = ["dioxus/web"]
