--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ version = "0.5.2"
 [workspace.dependencies]
 dioxus = { path = "packages/dioxus", version = "0.5.0" }
 dioxus-lib = { path = "packages/dioxus-lib", version = "0.5.0" }
-dioxus-core = { path = "packages/core", default-features = false, version = "0.5.0" }
+dioxus-core = { path = "packages/core", version = "0.5.0" }
 dioxus-core-macro = { path = "packages/core-macro", version = "0.5.0" }
 dioxus-config-macro = { path = "packages/config-macro", version = "0.5.0" }
 dioxus-router = { path = "packages/router", version = "0.5.0" }
@@ -146,9 +146,6 @@ opt-level = 3
 inherits = "dev"
 debug-assertions = false
 
-[profile.release]
-debug = true
-
 # This is a "virtual package"
 # It is not meant to be published, but is used so "cargo run --example XYZ" works properly
 [package]
@@ -171,7 +168,6 @@ reqwest = { version = "0.11.9", features = ["json"], optional = true }
 http-range = { version = "0.1.5", optional = true }
 ciborium = { version = "0.2.1", optional = true }
 base64 = { version = "0.21.0", optional = true }
-tracing = { workspace = true }
 
 [dev-dependencies]
 dioxus = { workspace = true, features = ["router"] }
