--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ wasm-bindgen-futures = "0.4.42"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.16", features = ["verbatim"] }
-manganis-cli-support = { path = "C:\\Users\\Darka\\Documents\\Projects\\DioxusLabs\\dioxus-collect-assets\\cli-support", features = ["html"] }
+manganis-cli-support = { git = "https://github.com/DioxusLabs/collect-assets", features = ["html"] }
 manganis = { version = "0.2.1" }
 interprocess = { version = "1.2.2", package = "interprocess-docfix" }
 
