switch to comments as placeholder nodes

--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -46,6 +46,7 @@ features = [
     "HtmlTextAreaElement",
     "HtmlFormElement",
     "Text",
+    "Comment",
     "Window",
     "DataTransfer",
     "console",
