--- a/packages/core-macro/Cargo.toml
+++ b/packages/core-macro/Cargo.toml
@@ -23,6 +23,7 @@ prettyplease = "0.2.15"
 # testing
 [dev-dependencies]
 dioxus = { workspace = true }
+dioxus-html = { workspace = true, features = ["serialize"] }
 rustversion = "1.0"
 tokio = { workspace = true, features = ["full", "time"] }
 trybuild = "1.0"
