--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -50,6 +50,7 @@ futures-util = { workspace = true }
 urlencoding = "2.1.2"
 async-trait = "0.1.68"
 tao = { version = "0.26.1", features = ["rwh_05"] }
+tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
