--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -23,6 +23,7 @@ tracing = { workspace = true }
 serde = { version = "1", features = ["derive"], optional = true }
 generational-box = { workspace = true }
 rustversion = "1.0.17"
+const_format = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
