--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -12,6 +12,8 @@ keywords = ["dom", "ui", "gui", "react", "wasm"]
 [dependencies]
 dioxus-core = { workspace = true }
 dioxus-html = { workspace = true, features = ["wasm-bind"] }
+dioxus-hot-reload = { workspace = true }
+dioxus-signals = { workspace = true }
 dioxus-interpreter-js = { workspace = true, features = [
     "minimal_bindings",
     "webonly",
