--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -21,6 +21,8 @@ dioxus-signals = { workspace = true, optional = true }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "eval"] }
 dioxus-cli-config = { workspace = true, features = ["read-config"] }
 generational-box = { workspace = true }
+# hotreload only works on desktop platforms.... mobile is still wip
+dioxus-hot-reload = { workspace = true, optional = true, features = ["serve"]}
 
 serde = "1.0.136"
 serde_json = "1.0.79"
@@ -59,8 +61,7 @@ signal-hook = "0.3.17"
 global-hotkey = "0.5.0"
 rfd = "0.14"
 muda = "0.11.3"
-# hotreload only works on desktop platforms.... mobile is still wip
-dioxus-hot-reload = { workspace = true, optional = true }
+
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2.7"
