--- a/packages/hot-reload/Cargo.toml
+++ b/packages/hot-reload/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["dom", "ui", "gui", "react", "hot-reloading"]
 dioxus-rsx = { workspace = true, features = ["serde"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-html = { workspace = true, optional = true }
+dioxus-signals = { workspace = true, optional = true }
 
 notify = { version = "5.0.0", optional = true }
 chrono = { version = "0.4.24", default-features = false, features = ["clock"], optional = true }
@@ -36,7 +37,7 @@ tokio = { workspace = true, features = ["full"] }
 default = ["dioxus-html"]
 custom_file_watcher = ["dep:ignore", "dep:chrono", "dep:notify", "dep:execute", "dep:once_cell", "dep:ignore"]
 file_watcher = ["custom_file_watcher", "dioxus-html/hot-reload-context", "dioxus-rsx/hot_reload"]
-serve = [ "dep:tokio-stream", "dep:futures-util", "dep:tokio", "file_watcher", "dep:tokio-tungstenite"]
+serve = [ "dep:tokio-stream", "dep:futures-util", "dep:tokio", "file_watcher", "dep:tokio-tungstenite", "dep:dioxus-signals" ]
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
