--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -30,8 +30,8 @@ prettier-please = { version = "*" }
 [features]
 default = ["hot_reload"]
 hot_reload_traits = []
-hot_reload = ["dep:krates", "dep:internment", "dep:dioxus-core", "hot_reload_traits"]
-serde = ["dep:serde"]
+hot_reload = ["dep:krates", "dep:internment", "dep:dioxus-core", "hot_reload_traits", "serde"]
+serde = ["dep:serde", "dioxus-core/serialize"]
 
 [dev-dependencies]
 insta = "1.36.1"
