--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -16,7 +16,7 @@ keywords = ["dom", "ui", "gui", "react"]
 quote = { workspace = true }
 proc-macro2 = { workspace = true, features = ["span-locations"] }
 dioxus-core = { workspace = true, optional = true }
-syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
+syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
 serde = { workspace = true, features = ["derive"], optional = true }
 internment = { version = "0.7.0", optional = true }
 krates = { version = "0.16.6", optional = true }
