--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -65,13 +65,6 @@ tower = { workspace = true }
 once_cell = "1.19.0"
 
 # plugin packages
-mlua = { version = "0.8.1", features = [
-    "lua54",
-    "vendored",
-    "async",
-    "send",
-    "macros",
-], optional = true }
 ctrlc = "3.2.3"
 open = "5.0.1"
 cargo-generate = "0.20.0"
@@ -109,7 +102,7 @@ wasm-opt = "0.116.1"
 
 [features]
 default = []
-plugin = ["dep:mlua"]
+plugin = []
 
 [[bin]]
 path = "src/main.rs"
