--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -37,7 +37,6 @@ anyhow = "1"
 hyper = { workspace = true }
 hyper-util = "0.1.3"
 hyper-rustls = { workspace = true }
-indicatif = "0.17.5"
 subprocess = "0.2.9"
 rayon = "1.8.0"
 futures-channel = { workspace = true }
@@ -96,6 +95,7 @@ env_logger = "0.11.3"
 tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
 tracing = { workspace = true }
 wasm-opt = "0.116.1"
+ratatui = "0.27.0"
 
 # on maco, we need to specify the vendored feature on ssl when cross compiling
 # [target.'cfg(target_os = "macos")'.dependencies]
