shrink deps where possible

--- a/packages/fullstack/examples/axum-auth/Cargo.toml
+++ b/packages/fullstack/examples/axum-auth/Cargo.toml
@@ -34,12 +34,12 @@ anyhow = "1.0.71"
 
 [dependencies.axum_session]
 workspace = true
-features = ["sqlite-rustls"]
+# features = ["sqlite-rustls"]
 optional = true
 
 [dependencies.axum_session_auth]
 workspace = true
-features = ["sqlite-rustls"]
+# features = ["sqlite-rustls"]
 optional = true
 
 [features]
