--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,16 +110,16 @@ tower = "0.4.13"
 http = "1.0.0"
 tower-http = "0.5.2"
 hyper = "1.0.0"
-hyper-rustls = "0.26.0"
+hyper-rustls = "0.27.2"
 serde_json = "1.0.61"
 serde = "1.0.61"
 syn = "2.0"
 quote = "1.0"
 proc-macro2 = "1.0"
-axum_session = "0.12.1"
-axum_session_auth = "0.12.1"
+axum_session = "0.14.0"
+axum_session_auth = "0.14.0"
 axum-extra = "0.9.2"
-reqwest = "0.11.24"
+reqwest = "0.12.5"
 owo-colors = "4.0.0"
 ciborium = "0.2.1"
 base64 = "0.21.0"
@@ -168,7 +168,7 @@ publish = false
 
 [dependencies]
 manganis = { workspace = true, optional = true }
-reqwest = { version = "0.11.9", features = ["json"], optional = true }
+reqwest = { workspace = true, features = ["json"], optional = true }
 http-range = { version = "0.1.5", optional = true }
 ciborium = { version = "0.2.1", optional = true }
 base64 = { version = "0.21.0", optional = true }
