--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -30,7 +30,7 @@ futures-util = { workspace = true, features = ["async-await-macro"] }
 notify = { version = "5.0.0-pre.16", features = ["serde"] }
 html_parser = { workspace = true }
 cargo_metadata = "0.18.1"
-tokio = { version = "1.16.1", features = ["fs", "sync", "rt", "macros", "process"] }
+tokio = { version = "1.16.1", features = ["fs", "sync", "rt", "macros", "process", "rt-multi-thread"] }
 atty = "0.2.14"
 chrono = "0.4.19"
 anyhow = "1"
