--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -89,7 +89,7 @@ cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 [dev-dependencies]
 dioxus = { workspace = true, features = ["desktop"] }
 exitcode = "1.1.2"
-reqwest = { version = "0.11.9", features = ["json"] }
+reqwest = { workspace = true, features = ["json"] }
 http-range = { version = "0.1.5" }
 dioxus-ssr = { workspace = true, version = "0.5.0", default-features = false }
 separator = "0.4.1"
