--- a/packages/fullstack/examples/axum-hello-world/Cargo.toml
+++ b/packages/fullstack/examples/axum-hello-world/Cargo.toml
@@ -13,7 +13,7 @@ simple_logger = "4.2.0"
 tracing-wasm = "0.2.1"
 tracing = { workspace = true }
 tracing-subscriber = "0.3.17"
-reqwest = "0.11.18"
+reqwest = { workspace = true }
 
 [features]
 default = []
