remove a few deps

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -68,11 +68,11 @@ once_cell = "1.19.0"
 # plugin packages
 ctrlc = "3.2.3"
 open = "5.0.1"
-cargo-generate = "0.20.0"
-toml_edit = "0.21.0"
+cargo-generate = "0.21.1"
+toml_edit = "0.22.15"
 
 # bundling
-tauri-bundler = { version = "=1.4.*", features = ["native-tls-vendored"] }
+tauri-bundler = { workspace = true }
 
 # formatting
 # syn = { workspace = true }
@@ -80,7 +80,7 @@ prettyplease = { workspace = true }
 
 # Assets
 manganis-cli-support = { workspace = true, features = ["html"] }
-brotli = "5.0.0"
+brotli = "6.0.0"
 
 dioxus-autofmt = { workspace = true }
 dioxus-check = { workspace = true }
