--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,10 +98,12 @@ wasm-bindgen-futures = "0.4.42"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.16", features = ["verbatim"] }
-manganis-cli-support = { git = "https://github.com/DogeDark/dioxus-collect-assets/", features = ["html"] }
+manganis-cli-support = { git = "https://github.com/dioxuslabs/collect-assets/", features = ["html"] }
 manganis = { version = "0.2.1" }
 const_format = "0.2.32"
-
+cargo_toml = { version = "0.20.3" }
+tauri-utils = { version = "=1.5.*" }
+tauri-bundler = { version = "=1.4.*" }
 lru = "0.12.2"
 async-trait = "0.1.77"
 axum = "0.7.0"
@@ -122,9 +124,10 @@ axum-extra = "0.9.2"
 reqwest = "0.12.5"
 owo-colors = "4.0.0"
 ciborium = "0.2.1"
-base64 = "0.21.0"
+base64 = "0.22.1"
 once_cell = "1.17.1"
 uuid = "1.9.1"
+convert_case = "0.6.0"
 
 # cli, cli-config
 dirs = "5.0.1"
