--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -13,13 +13,13 @@ clap = { version = "4.2", features = ["derive"], optional = true }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 toml = { workspace = true, optional = true }
-cargo_toml = { version = "0.18.0", optional = true }
+cargo_toml = { workspace = true, optional = true }
 once_cell = "1.18.0"
 tracing = { workspace = true }
 
 # bundling
-tauri-bundler = { version = "=1.4.0", features = ["native-tls-vendored"], optional = true }
-tauri-utils = { version = "=1.5.*", optional = true }
+tauri-bundler = { workspace = true, optional = true }
+tauri-utils = { workspace = true, optional = true }
 
 dirs = { workspace = true, optional = true }
 
