--- a/packages/core-macro/Cargo.toml
+++ b/packages/core-macro/Cargo.toml
@@ -17,7 +17,7 @@ proc-macro2 = { version = "1.0" }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
 dioxus-rsx = { workspace = true }
-convert_case = "^0.6.0"
+convert_case = { workspace = true }
 prettyplease = "0.2.15"
 
 # testing
