--- a/packages/rsx-rosetta/Cargo.toml
+++ b/packages/rsx-rosetta/Cargo.toml
@@ -20,7 +20,7 @@ html_parser = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full"] }
-convert_case = "0.5.0"
+convert_case = { workspace = true }
 
 # [features]
 # default = ["html"]
