--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -25,9 +25,9 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 toml = { workspace = true }
 fs_extra = "1.2.0"
-cargo_toml = "0.18.0"
+cargo_toml = { workspace = true }
 futures-util = { workspace = true, features = ["async-await-macro"] }
-notify = { version = "5.0.0-pre.16", features = ["serde"] }
+notify = { workspace = true, features = ["serde"] }
 html_parser = { workspace = true }
 cargo_metadata = "0.18.1"
 tokio = { version = "1.16.1", features = ["fs", "sync", "rt", "macros", "process", "rt-multi-thread"] }
