--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -68,7 +68,7 @@ once_cell = "1.19.0"
 # plugin packages
 ctrlc = "3.2.3"
 open = "5.0.1"
-cargo-generate = "0.21.1"
+cargo-generate = "=0.21.1"
 toml_edit = "0.22.15"
 
 # bundling
@@ -101,6 +101,9 @@ crossterm = { version = "0.27.0", features = ["event-stream"] }
 # on maco, we need to specify the vendored feature on ssl when cross compiling
 # [target.'cfg(target_os = "macos")'.dependencies]
 # openssl = { version = "0.10", features = ["vendored"] }
+
+[build-dependencies]
+built = { version = "=0.7.3", features = ["git2"] }
 
 [features]
 default = []
