--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -31,6 +31,7 @@ notify = { workspace = true, features = ["serde"] }
 html_parser = { workspace = true }
 cargo_metadata = "0.18.1"
 tokio = { version = "1.16.1", features = ["fs", "sync", "rt", "macros", "process", "rt-multi-thread"] }
+tokio-stream = "0.1.15"
 atty = "0.2.14"
 chrono = "0.4.19"
 anyhow = "1"
