--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -25,10 +25,10 @@ serde = "1.0.136"
 serde_json = "1.0.79"
 thiserror = { workspace = true }
 tracing = { workspace = true }
-wry = { version = "0.37.0", default-features = false, features = [
+wry = { version = "0.41.0", default-features = false, features = [
     "os-webview",
     "protocol",
-    "file-drop",
+    "drag-drop",
 ] }
 futures-channel = { workspace = true }
 tokio = { workspace = true, features = [
