--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -96,7 +96,7 @@ env_logger = "0.11.3"
 tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
 tracing = { workspace = true }
 wasm-opt = "0.116.1"
-ratatui = { version = "0.27.0", features = ["crossterm"] }
+ratatui = { version = "0.27.0", features = ["crossterm", "unstable"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 
 # on maco, we need to specify the vendored feature on ssl when cross compiling
