--- a/packages/playwright-tests/static-generation/Cargo.toml
+++ b/packages/playwright-tests/static-generation/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true, features = ["fullstack"] }
+dioxus = { workspace = true, features = ["static-generation"] }
 serde = "1.0.159"
 tokio = { workspace = true, features = ["full"], optional = true }
 
