--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,8 +99,8 @@ wasm-bindgen-futures = "0.4.42"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.16", features = ["verbatim"] }
-manganis-cli-support = { git = "https://github.com/DogeDark/dioxus-collect-assets/", features = ["html"] }
-manganis = { version = "0.2.1" }
+manganis-cli-support = { git = "https://github.com/DioxusLabs/collect-assets", features = ["html"] }
+manganis = { git = "https://github.com/DioxusLabs/collect-assets" }
 interprocess = { version = "1.2.2", package = "interprocess-docfix" }
 const_format = "0.2.32"
 
