--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -22,7 +22,7 @@ dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "eval
 dioxus-cli-config = { workspace = true, features = ["read-config", "cli"] }
 generational-box = { workspace = true }
 # hotreload only works on desktop platforms.... mobile is still wip
-dioxus-hot-reload = { workspace = true, optional = true, features = ["serve", "apply"]}
+dioxus-hot-reload = { workspace = true, optional = true, features = ["serve", "client"]}
 
 serde = "1.0.136"
 serde_json = "1.0.79"
