--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["dom", "ui", "gui", "react", "wasm"]
 [dependencies]
 dioxus-core = { workspace = true }
 dioxus-html = { workspace = true, features = ["wasm-bind"] }
-dioxus-hot-reload = { workspace = true, features = ["apply"] }
+dioxus-hot-reload = { workspace = true, features = ["client"] }
 dioxus-signals = { workspace = true }
 dioxus-interpreter-js = { workspace = true, features = [
     "minimal_bindings",
