--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -38,6 +38,7 @@ anyhow = "1"
 hyper = { workspace = true }
 hyper-util = "0.1.3"
 hyper-rustls = { workspace = true }
+rustls = "0.23.11"
 subprocess = "0.2.9"
 rayon = "1.8.0"
 futures-channel = { workspace = true }
