--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -95,6 +95,7 @@ ignore = "0.4.22"
 env_logger = "0.11.3"
 
 tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
+console-subscriber = "0.3.0"
 tracing = { workspace = true }
 wasm-opt = "0.116.1"
 ratatui = { version = "0.27.0", features = ["crossterm", "unstable"] }
