--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -95,7 +95,7 @@ ignore = "0.4.22"
 env_logger = "0.11.3"
 
 tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
-console-subscriber = "0.3.0"
+console-subscriber = { version = "0.3.0", optional = true }
 tracing = { workspace = true }
 wasm-opt = "0.116.1"
 ratatui = { version = "0.27.0", features = ["crossterm", "unstable"] }
@@ -112,6 +112,7 @@ built = { version = "=0.7.3", features = ["git2"] }
 [features]
 default = []
 plugin = []
+tokio-console = ["dep:console-subscriber"]
 
 [[bin]]
 path = "src/main.rs"
