--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -101,6 +101,7 @@ wasm-opt = "0.116.1"
 ratatui = { version = "0.27.0", features = ["crossterm", "unstable"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 ansi-to-tui = "4.0.1"
+ansi-to-html = "0.2.1"
 
 # on maco, we need to specify the vendored feature on ssl when cross compiling
 # [target.'cfg(target_os = "macos")'.dependencies]
