switch to a Document trait and introduce Script/Head/Style/Meta components

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,12 +30,17 @@ members = [
     "packages/fullstack",
     "packages/server-macro",
     "packages/static-generation",
+    "packages/lazy-js-bundle",
+
+    # Fullstack examples
     "packages/fullstack/examples/axum-hello-world",
     "packages/fullstack/examples/axum-router",
     "packages/fullstack/examples/axum-streaming",
     "packages/fullstack/examples/axum-desktop",
     "packages/fullstack/examples/axum-auth",
     "packages/fullstack/examples/hackernews",
+
+    # Static generation examples
     "packages/static-generation/examples/simple",
     "packages/static-generation/examples/router",
     "packages/static-generation/examples/github-pages",
@@ -85,6 +90,7 @@ dioxus-hot-reload = { path = "packages/hot-reload", version = "0.5.0" }
 dioxus-fullstack = { path = "packages/fullstack", version = "0.5.0" }
 dioxus-static-site-generation = { path = "packages/static-generation", version = "0.5.0" }
 dioxus_server_macro = { path = "packages/server-macro", version = "0.5.0", default-features = false }
+lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.5.0" }
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 toml = "0.8"
