--- a/packages/interpreter/Cargo.toml
+++ b/packages/interpreter/Cargo.toml
@@ -26,7 +26,7 @@ dioxus-core = { workspace = true, optional = true }
 dioxus-html = { workspace = true, optional = true }
 
 [build-dependencies]
-md5 = "0.7.0"
+lazy-js-bundle = { workspace = true }
 
 [features]
 default = []
@@ -42,4 +42,3 @@ webonly = [
 ]
 binary-protocol = ["sledgehammer", "dep:dioxus-core", "dep:dioxus-html"]
 minimal_bindings = []
-eval = []
