--- a/packages/hot-reload/Cargo.toml
+++ b/packages/hot-reload/Cargo.toml
@@ -14,7 +14,7 @@ dioxus-rsx = { workspace = true, features = ["serde"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-html = { workspace = true, optional = true }
 dioxus-signals = { workspace = true, optional = true }
-dioxus-cli-config = { workspace = true, optional = true, features = ["cli"]}
+dioxus-cli-config = { workspace = true, optional = true}
 
 notify = { workspace = true, optional = true }
 chrono = { version = "0.4.24", default-features = false, features = ["clock"], optional = true }
