--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -31,7 +31,7 @@ futures-util = { workspace = true, features = [
 ] }
 futures-channel = { workspace = true }
 serde_json = { version = "1.0", optional = true }
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0" }
 serde-wasm-bindgen = { version = "0.5.0", optional = true }
 
 ciborium = { workspace = true, optional = true }
@@ -61,7 +61,7 @@ mounted = ["web-sys/Element", "dioxus-html/mounted"]
 file_engine = [
     "dioxus-html/file-engine",
 ]
-hot_reload = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location", "dep:serde_json", "dep:serde", "dioxus-core/serialize"]
+hot_reload = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location", "dep:serde_json", "dioxus-core/serialize"]
 document = ["dioxus-html/document", "dep:serde-wasm-bindgen", "dep:serde_json"]
 
 [dev-dependencies]
